--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,13 @@
    h2 {
     text-align: center;
    }
+
+   .card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid gray;
+    box-shadow: 5px 10px #888888;
+  }
    
    img {
     display: block;
